cabal-version:      3.0
name:               butler
version:            0.2.1
synopsis:           At your service.
description:        At your service..
category:           Development
homepage:           https://github.com/TristanCacqueray/butler#readme
bug-reports:        https://github.com/TristanCacqueray/butler/issues
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  data/haskell-butler-logo.svg
  data/ws.js

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/butler

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    ViewPatterns

common executable
  ghc-options: -threaded -rtsopts -with-rtsopts=-T

library
  import:          common
  hs-source-dirs:  source/libraries/butler
  exposed-modules:
    Butler
    Butler.App
    Butler.AppID
    Butler.AppSettings
    Butler.Auth
    Butler.Auth.Guest
    Butler.Auth.Invitation
    Butler.Auth.OIDC
    Butler.Core
    Butler.Core.Buzzer
    Butler.Core.Clock
    Butler.Core.Dynamic
    Butler.Core.Events
    Butler.Core.File
    Butler.Core.History
    Butler.Core.Logger
    Butler.Core.Memory
    Butler.Core.NatMap
    Butler.Core.Network
    Butler.Core.Pipe
    Butler.Core.Process
    Butler.Core.Processor
    Butler.Core.Retry
    Butler.Core.Storage
    Butler.Database
    Butler.Display
    Butler.Display.Client
    Butler.Display.GUI
    Butler.Display.Session
    Butler.Display.User
    Butler.Display.WebSocket
    Butler.Frame
    Butler.Prelude
    Butler.REPL
    Butler.Servant
    Butler.Test
    Butler.UnixShell
    Butler.Window
    XStatic.Butler

  build-depends:
    , aeson
    , attoparsec
    , base                   <5
    , base64-bytestring
    , binary
    , bytestring
    , cborg-json
    , cgroup-rts-threads
    , containers
    , cryptohash-sha256
    , directory
    , ebml
    , exceptions
    , filepath
    , friendly-time
    , generic-lens
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , http-types
    , jose
    , ki-unlifted
    , lens
    , lens-aeson
    , lucid
    , lucid-htmx
    , lucid-xstatic
    , migrant-core
    , migrant-sqlite-simple
    , mmorph
    , mtl
    , network
    , oidc-client
    , one-line-aeson-text
    , optparse-applicative
    , PyF
    , random
    , retry
    , serialise
    , servant
    , servant-auth
    , servant-auth-server
    , servant-lucid
    , servant-server
    , sqlite-simple
    , stm
    , tasty
    , tasty-hunit
    , text
    , text-rope
    , time
    , typed-process
    , unix
    , unix-time
    , unliftio
    , unordered-containers
    , uuid
    , wai
    , wai-websockets
    , warp
    , warp-tls
    , websockets
    , witch
    , with-utf8
    , xstatic
    , xstatic-htmx
    , xstatic-tailwind
    , xstatic-th

library butler-desktop
  import:          common
  hs-source-dirs:  source/libraries/desktop
  exposed-modules:
    Butler.App.Chat
    Butler.App.Chess
    Butler.App.Clock
    Butler.App.Desktop
    Butler.App.FileManager
    Butler.App.FileViewer
    Butler.App.JiraClient
    Butler.App.Launcher
    Butler.App.LogViewer
    Butler.App.MD2Jira
    Butler.App.MineSweeper
    Butler.App.Mumbler
    Butler.App.Noter
    Butler.App.NoVnc
    Butler.App.Painter
    Butler.App.PdfViewer
    Butler.App.PokerPlanner
    Butler.App.ProcessExplorer
    Butler.App.QRTest
    Butler.App.RandomCat
    Butler.App.SessionManager
    Butler.App.Settings
    Butler.App.SocialLogin
    Butler.App.SoundTest
    Butler.App.Tabletop
    Butler.App.Template
    Butler.App.Terminal
    Butler.App.Terminal.Emacs
    Butler.App.TodoManager
    Butler.GUI.File
    Butler.Lobby
    Butler.Service.Assistant
    Butler.Service.Cursor
    Butler.Service.FileService
    Butler.Service.SoundBlaster
    Butler.Service.SshAgent
    ButlerDemos

  build-depends:
    , aeson
    , base64-bytestring
    , butler
    , bytestring
    , containers
    , directory
    , ebml
    , fast-myers-diff
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , jira-client
    , lucid
    , lucid-htmx
    , lucid-svg
    , lucid-xstatic
    , md2jira
    , network
    , network-run
    , ot
    , posix-pty
    , process
    , qrcode-core
    , qrcode-juicypixels
    , random
    , scientific
    , text
    , text-rope
    , time
    , typed-process
    , unix
    , unliftio
    , uuid
    , xstatic-hyperscript
    , xstatic-novnc
    , xstatic-otjs
    , xstatic-pcm-player
    , xstatic-pdfjs
    , xstatic-quill
    , xstatic-quill-cursors
    , xstatic-remixicon
    , xstatic-sweetalert2
    , xstatic-winbox
    , xstatic-xterm

executable butler
  import:         common, executable
  hs-source-dirs: source/application
  main-is:        Main.hs
  build-depends:  butler-desktop

test-suite spec
  import:             common, executable
  hs-source-dirs:     source/test-suite
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  other-modules:
    Butler.App.ClockTest
    Butler.App.NoterTest
    Butler.Core.ClockTest
    Butler.Core.HistoryTest
    Butler.Core.LoggerTest
    Butler.Core.MemoryTest
    Butler.Core.ProcessorTest
    Butler.Session

  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
    , butler
    , butler-desktop
    , hspec-expectations
    , tasty
    , tasty-hunit
